--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=8081
 
+# = Spring Datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/financetracker?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Redbrisk18!
+# = Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# = Show log for each sql query
+spring.jpa.show-sql = true
+
